# automata

./: CMakeLists.txt  build.sh  info.md  run.sh
apps/: CMakeLists.txt  info.md  main.cpp
cmake/: info.md
include/automata/: automata.h  cellular_automata_base.h  grid.h  heightmap_automata.h  heigthmap_automata.h  info.md
python/: info.md
scripts/: info.md
src/: CMakeLists.txt  automata.cpp  cellular_automata_base.cpp  grid.cpp  heightmap_automata.cpp  heigthmap_automata.cpp  info.md  lodepng.cpp
tests/: info.md
